# bss-comparison

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  BSS-TEST-REFACTOR-DESIGN.md  LICENSE  Makefile  README.md  generate_comparison_report.py  generate_summary.py  main_cwru.py  main_nasa_milling.py  main_phm_milling.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_extended.txt  run_bss_comparison.py  run_full_comparison.py  run_full_comparison_v2.py  run_tfa_comparison.py  setup.py
configs/: cwru.yaml  default.yaml  nasa.yaml  phm2010.yaml
docs/superpowers/plans/: 2026-05-01-bss-test-refactor.md
docs/superpowers/specs/: 2026-05-01-plotting-optimization-design.md
examples/: README.md  quick_start.py
experiments/: __init__.py
experiments/comparison/: bss_methods.py  dl_classifiers.py  ml_classifiers.py  phm_bss_methods.py  phm_classifiers.py  phm_tfa_methods.py  tfa_methods.py
experiments/single/: cwru.py  nasa_milling.py  phm_milling.py
src/: __init__.py  bss_module.py  config.py  cwt_module.py  data_loader.py  dl_classifier.py  evaluation.py  exceptions.py  feature_extractor.py  logger.py  ml_classifier.py  preprocessing.py  utils.py
src/bss_test/: __init__.py  dl_classifier.py  evaluation.py  preprocessing.py  types.py
src/bss_test/bss/: __init__.py  factory.py  ica.py  jade.py  nmf.py  pca.py  sobi.py
src/bss_test/io/: __init__.py  cwru.py  nasa.py  phm.py
src/bss_test/tfa/: __init__.py  cwt.py  emd.py  factory.py  stft.py  wpt.py
src/bss_test/utils/: __init__.py  config.py  exceptions.py  logger.py
tests/: __init__.py  conftest.py  test_bss_module.py  test_config.py  test_cwt_math.py  test_cwt_module.py  test_evaluation.py  test_evaluation_math.py  test_feature_extractor.py  test_feature_math.py  test_math_correctness.py  test_preprocessing.py  test_preprocessing_math.py  test_utils.py
